--- a/bootstrabgrid.html
+++ b/bootstrabgrid.html
@@ -16,7 +16,7 @@
 <body>
     <!-- <script> alert ("welcome to bs alert");
    </script>  -->
-    <div class="alert alert-success">welcome to bs alert</div>
+    <div class="alert alert-light">welcome to bs alert</div>
     <div class="card-header" style="text-align: center;">
         <span class="alert alert-info">HOME </span>
         <span class="alert alert-primary">ABOUT </span>
@@ -29,7 +29,7 @@
     <button class="btn btn-info">Add to cart<span class="badge bg-dark">NEW MESSAGE</span></button>
 
 
-    <button class="btn btn-outline-primary">DORUSTREE</button>
+    <button class="btn btn-outline-danger">DORUSTREE</button>
     <br>
 
     <button class="btn btn-outline-danger btn-lg">10 d </button>
@@ -149,7 +149,7 @@
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
             data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+            <span class="visually-hidden ">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
             data-bs-slide="next">
@@ -159,6 +159,8 @@
     </div>
 
     <hr>
+    <br>
+
 
 
     <div id="demo" class="carousel slide" data-bs-ride="carousel">
@@ -168,6 +170,7 @@
             <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
             <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
             <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+            <button type="button" data-bs-target="demo" data-bs-slide-to="3"></button>
         </div>
 
 
@@ -181,15 +184,20 @@
                     class="d-block w-100">
             </div>
             <div class="carousel-item">
+                <img src="pngtree-yellow-app-show-background-image-image_157686.jpg" alt="Chicago"
+                    class="d-block w-100">
+            </div>
+            <div class="carousel-item">
                 <img src="pngtree-logistics-industry-and-freight-profit-analyzing-image_1091631.jpg" alt="New York"
                     class="d-block w-100">
-                <div class="carousel-caption d-none d-sm-block">
-                    <img src="image.png" height="100px" alt="">
-                    <h5>i'm a developher BRO</h5>
-                        <p>USE THE CAPTIONS </p>
-                    
-                </div>
             </div>
+            <div class="carousel-caption d-none d-sm-block">
+                <img src="image.png" height="100px" alt="">
+                <h5>i'm a developher BRO</h5>
+                <p>USE THE CAPTIONS </p>
+            </div>
+
+
         </div>
 
 
@@ -200,6 +208,82 @@
             <span class="carousel-control-next-icon"></span>
         </button>
     </div>
+    <div class="container">
+        <div class="row row-cols-3">
+            <div class="col">1</div>
+            <div class="col">2</div>
+            <div class="col-10">4</div>
+            <div class="col">Column</div>
+        </div>
+    </div>
+    <hr>
+    <h5>using grid </h5>
+    <div class="container">
+        <div class="row">
+            <div class="col bg-warning">
+                1 of 3
+            </div>
+            <div class="col-6 bg-info">
+                2 of 3 
+            </div>
+            <div class="col bg-info">
+                3 of 3
+            </div>
+        </div>
+        <div class="row">
+            <div class="col bg-danger">
+                1 of 3
+            </div>
+            <div class="col-8 bg-warning">
+                2 of 3 
+            </div>
+            <div class="col-2 bg-success">
+                3 of 3
+            </div>
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-3 bg-danger">
+                Level 1: .col-sm-3 <br>
+
+                n <br> a <br> v <br> b <br> a <br> r <br>  RIGHT
+             </div>
+            <div class="col-sm-9 bg-dark">
+                <div class="row">
+                    <div class="col-sm-12 col-lg-9  bg-info">
+                        <div class="card">
+                            <img src="download.jpeg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text.</p>
+                                <div class="card-footer"> <a href="#" class="btn btn-primary">click ME................&#128512</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-lg-3  bg-warning">
+                        Level 2: .col-4 .col-sm-6 <br>
+
+                        left
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr>
+
+
+    <b>
+       TOTALLY END OF THE bootstrap
+    </b> 
+
 </body>
+
+<footer>
+    <div class="float-end d-block p-5">  ©copyrights@kk</div>
+</footer>
 
 </html>
